# DJ_ecom_model_combo

./: .gitignore  Procfile  pyproject.toml  requirements.txt
account/: forms.py  models.py  token.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_rewardtransaction_order.py
account/templates/account/: delete-account.html  my-login.html  profile-management.html
account/templates/account/password/: password-reset-complete.html  password-reset-form.html  password-reset-sent.html  password-reset.html
account/templates/account/registration/: email-verification-failed.html  email-verification-sent.html  email-verification-success.html  register.html
cart/: urls.py
cart/templates/cart/: cart-summary.html
ecom_store/: asgi.py  settings.py  urls.py  wsgi.py
payment/: admin.py  forms.py  models.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_order_paypal_transaction_id_and_more.py
payment/templates/payment/: checkout.html  payment-failed.html  payment-success.html
static/css/: arcade.css  styles.css
static/js/: app.js
store/: admin.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_product_image.py
store/templates/store/: base.html  list-category.html  list-topic.html  nav.html  store.html
