[project]
name = "ecom-combo"
version = "0.1.0"
description = "Used to test the actual site."
authors = [
    {name = "Mustafa Prodhan",email = "mufassagit@gmail.com"}
]
package-mode = false
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==6.0)",
    "python-decouple (>=3.8,<4.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "django-crispy-forms (>=2.6,<3.0)",
    "crispy-bootstrap5 (>=2026.3,<2027.0)",
    "django-six (>=1.0.5,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
